--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "hello-world",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://comeonletstwistagain.github.io/react-test",
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
@@ -11,6 +13,7 @@
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
